# embvm-demo

./: .gitignore  LICENSE.md  README.md  meson.build
docs/project-history/2020/2020-09/: 2020-09-30T23:08:33Z_note_Fa25JN6O7lRHYhQl.md
docs/project-history/2020/2020-10/: 2020-10-01T19:47:56Z_note_XqytSJ7CxImAgwkU.md
src/: main.cpp  meson.build
subprojects/: embvm-core.wrap  embvm-demo-platforms.wrap  stm32l4.wrap
tools/: Jenkinsfile
